fixed bug that caused labels displaying the wrong colors when clicked

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ h1 {
 	font-weight: 200;
 	margin-bottom: 2%;
 }
-.index{
+.index {
 	margin-top: 15%;
 }
 
@@ -40,3 +40,15 @@ h1 {
 	background-color: #00b386;
 }
 
+.input-field .prefix.active {
+	color: #00b386;
+}
+
+#m_input:focus {
+	border-bottom: 1px solid #00b386;
+	box-shadow: 0 1px 0 0 #00b386;
+}
+
+#m_input:focus + label {
+	color: #00b386;
+}
